--- a/projects.html
+++ b/projects.html
@@ -11,6 +11,7 @@
   <div class="site-box" id="top">
       <div id="header" class="section-box">
         <h1 class="main-title">My Project Links</h1>
+        <button type="button" id="theme-toggle-btn" class="theme-toggle-btn">Dark Mode</button>
         <p class="subtitle">This page works as my simple project hub.</p>
         <div class="nav-links">
           <a href="index.html">Back to Home</a>
@@ -19,35 +20,28 @@
 
       <div id="live-links" class="section-box">
         <h2 class="section-heading">Live Project Links</h2>
-        <ul>
-          <li>
-            <a href="https://amartaka.vercel.app">amartaka.vercel.app</a> -
-            Personal web app with offline local storage to manage multiple wallets and daily transactions records.
-          </li>
-          <li>
-            <a href="https://poralikha.vercel.app">poralikha.vercel.app</a> -
-            A webportal for teacher and students with attendance, grades, assignments, and quiz submissions.
-          </li>
-          <li>
-            <a href="https://bongshobrikkho.web.app">bongshobrikkho.web.app</a> -
-            A family tree website where users can add their family tree and merge with family members.
-          </li>
-          <li>
-            business-management -
-            A internal CRM and POS for businesses.
-          </li>
-          <li>
-            <a href="https://crmus.vercel.app">crmus.vercel.app</a> -
-            CRM-focused web app.
-          </li>
-        </ul>
-      </div>
-
-      <div class="section-box">
-        <p><a href="#top">Back to top</a></p>
+        <div class="education-list">
+          <div class="education-item">
+            <h3 class="education-school"><a href="https://amartaka.vercel.app">amartaka.vercel.app</a></h3>
+            <p class="education-date">Personal web app with offline local storage to manage multiple wallets and daily transaction records.</p>
+          </div>
+          <div class="education-item">
+            <h3 class="education-school"><a href="https://poralikha.vercel.app">poralikha.vercel.app</a></h3>
+            <p class="education-date">A web portal for teachers and students with attendance, grades, assignments, and quiz submissions.</p>
+          </div>
+          <div class="education-item">
+            <h3 class="education-school"><a href="https://bongshobrikkho.web.app">bongshobrikkho.web.app</a></h3>
+            <p class="education-date">A family tree website where users can add their family tree and merge with other family members.</p>
+          </div>
+          <div class="education-item">
+            <h3 class="education-school"><a href="https://crmus.vercel.app">crmus.vercel.app</a></h3>
+            <p class="education-date">CRM-focused web app.</p>
+          </div>
+        </div>
       </div>
 
       <div id="footer">
+        <p><a href="#top">Back to top</a></p>
         <p>Page location: <span id="page-location">Loading...</span></p>
         <p>Last modified: <span id="last-modified">Loading...</span></p>
         <p>&#169; 2026 Md. Sameer Sakib. All rights reserved.</p>
