--- a/projects.html
+++ b/projects.html
@@ -37,6 +37,18 @@
             <h3 class="education-school"><a href="https://crmus.vercel.app">crmus.vercel.app</a></h3>
             <p class="education-date">CRM-focused web app.</p>
           </div>
+          <div class="education-item">
+            <h3 class="education-school"><a href="Fortune Generator/index.html" target="_blank" rel="noopener noreferrer">Fortune Generator</a></h3>
+            <p class="education-date">Opens the Fortune Generator project in a new tab.</p>
+          </div>
+          <div class="education-item">
+            <h3 class="education-school"><a href="Stopwatch/index.html" target="_blank" rel="noopener noreferrer">Stopwatch</a></h3>
+            <p class="education-date">Opens the Stopwatch project in a new tab.</p>
+          </div>
+          <div class="education-item">
+            <h3 class="education-school"><a href="To-Do List/index.html" target="_blank" rel="noopener noreferrer">To-Do List</a></h3>
+            <p class="education-date">Opens the To-Do List project in a new tab.</p>
+          </div>
         </div>
       </div>
 
